fix(QTDI-2284): fix junit resources cleanup